Diseño de "crear" y rediseño de "perfil"

--- a/public/style.css
+++ b/public/style.css
@@ -21,7 +21,7 @@ white; font-weight:500;
 } 
 
 .colorperfil{
-  background-color: #198754;
+  background-color: #127647f9;
 }
 
 .card, .card-login{ box-shadow: 0px 5px 10px 7px #0000003b; 
