--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -20,15 +20,108 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon1">@</span>
-            <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+    <!-- Barra de navegacion -->
+    <nav class="navbar-fluid pb-2">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-lg-6 text-left mt-3">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="/">
+                <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid" style="width:50px;">
+                <a href="/" class="link-light text-decoration-none pt-5" style="font-size: 30px;">Home</a> 
+              </a>
+            </div>
+          </div>
+    
+          <div class=" col-lg-6 d-flex justify-content-end text-center mt-3" >
+            <ul class="nav fs-5">
+              {{# if loggedin}}
+              <li class="nav-item">
+              <a
+                class="nav-link link-light btn btn-outline-white me-2"
+                href="/perfil"
+              >Mi perfil</a>
+              </li>
+              <div class="vr bg-light m-2"></div>
+              <li class="nav-item">
+                <a
+                  class="nav-link link-light btn btn-outline-white me-2"
+                  href="/crear"
+                >Crear Posteo</a>
+              </li>
+              {{else }}
+              <li class="nav-item">
+              <a
+                class="nav-link link-light btn btn-outline-white me-2"
+                href="/login"
+              >Desloguearse</a>
+              </li>
+              <div class="vr bg-light m-2"></div>
+              <li class="nav-item">
+                <a
+                  class="nav-link link-light btn btn-outline-white me-2"
+                  href="/plantas"
+                >Plantas favoritas</a>
+              </li>
+              {{/if}}
+              <div class="vr bg-light m-2"></div>
+              <li class="nav-item">
+                <a
+                  class="nav-link link-light btn btn-outline-white me-2"
+                  href="/posteos"
+                >Mis posteos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+
+    <div class=" container-fluid  justify-content-center my-3">
+        <div class="row">
+                <p class="fs-3 text-center">Crea tu posteo para Agro Forum!</p>
         </div>
 
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-            <span class="input-group-text" id="basic-addon2">@example.com</span>
+        <div class="d-flex row justify-content-center mb-3 ">
+            <div class="col-4">
+                <div class="form-floating mb-3">
+                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                 <label for="floatingInput">Titulo del post</label>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="form-floating mb-3">
+                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                 <label for="floatingInput">Tematica principal</label>
+                </div>
+            </div>
+        </div>
+
+        <div class=" d-flex row justify-content-center mb-5">
+            <div class="col-8">
+                <div class="form-floating">
+                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                 <label for="floatingTextarea2">Descripcion general</label>
+                </div>
+            </div>
+        </div>
+
+        <div class="d-flex row justify-content-start">
+            <div class="col-2"></div>
+            <div class="col-4">
+                <div class="mb-3">
+                 <label for="formFile" class="form-label">Selecciona la foto de portada para tu post</label>
+                 <input class="form-control" type="file" id="formFile">
+                </div>
+            </div>
+        </div>
+
+        <div class="d-flex row justify-content-center">
+            <div class="d-flex justify-content-end col-8">
+                <input class="btn btn-success me-2" type="submit" value="Publicar">
+                <input class="btn btn-danger" type="submit" value="Borrar todo">
+            </div>
         </div>
     </div>
 </body>
