--- a/views/perfil.hbs
+++ b/views/perfil.hbs
@@ -49,25 +49,10 @@
     
           <div class=" col-lg-6 d-flex justify-content-end text-center mt-3" >
             <ul class="nav fs-5">
-              {{# if loggedin}}
               <li class="nav-item">
               <a
                 class="nav-link link-light btn btn-outline-white me-2"
-                href="/perfil"
-              >Mi perfil</a>
-              </li>
-              <div class="vr bg-light m-2"></div>
-              <li class="nav-item">
-                <a
-                  class="nav-link link-light btn btn-outline-white me-2"
-                  href="/crear"
-                >Crear Posteo</a>
-              </li>
-              {{else }}
-              <li class="nav-item">
-              <a
-                class="nav-link link-light btn btn-outline-white me-2"
-                href="/login"
+                href="/logout"
               >Desloguearse</a>
               </li>
               <div class="vr bg-light m-2"></div>
@@ -77,7 +62,6 @@
                   href="/plantas"
                 >Plantas favoritas</a>
               </li>
-              {{/if}}
               <div class="vr bg-light m-2"></div>
               <li class="nav-item">
                 <a
@@ -110,6 +94,16 @@
               </div>
 
         </div>
+              {{# if loggedin}}
+          <div class="alert alert-success" role="alert">
+          Cambios subidos correctamente
+          </div>
+      {{/if}}
+      {{# if logge}}
+          <div class="alert alert-warning" role="alert">
+          introduzca bien la contraseña
+          </div>
+      {{/if}}
         <div class="col-4"></div>
         <div class="col-4 mb-3 d-flex justify-content-center">
           <button type="button" class="btn btn-danger ms-4 mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -117,7 +111,6 @@
           </button> </div>
         <div class="col-4 align-self-center "></div>
       </div>
- 
 
 
 <!-- Edicion de datos del usuario -->
@@ -155,6 +148,7 @@
                     aria-label="Dollar amount (with dot and two decimal places)"
                     aria-describedby="basic-addon1"
                     name="avatar"
+                    value="{{img}}"
                 />
             </div>
           </div>
@@ -164,7 +158,7 @@
               <i class="fa-lock">
               <label for="validationDefaultUsername" class="form-label">Contraseña</label>
               </i>
-              <input type="password" class="form-control" id="validationDefaultUsername" name="contraseña" aria-describedby="inputGroupPrepend2" required>
+              <input type="password" class="form-control" id="validationDefaultUsername" name="contrasena" aria-describedby="inputGroupPrepend2" required>
             </div>
             <div class="col-md-6">
               <i class="">
