--- a/views/index.hbs
+++ b/views/index.hbs
@@ -69,7 +69,7 @@
               <li class="nav-item">
               <a  class="nav-link link-light btn btn-outline-white "href="/perfil">
               {{#user}}
-              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="{{img}}" alt="" style="width: 45px; height: 50px;">
+              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="{{img}}" alt="" style="width: 45px; height: 45px;">
               {{/user}}
               </a>
               </li>
@@ -102,12 +102,7 @@
                   href="/posteos"
                 >Post's</a>
               </li>
-              <a  class="nav-link link-light btn btn-outline-white "href="/perfil">
-              {{#user}}
-              <img class="img-fluid rounded-circle mx-auto d-block shadow" src="{{img}}" alt="" style="width: 40px; height: 40px;">
-              {{/user}}
-              </li>
-              </a>
+
             </ul>
           </div>
         </div>
@@ -115,65 +110,56 @@
     </nav>
     
     <!-- Seccion de posteos (en proceso) -->
-    <div class="container text-center mt-5 mb-5">
-      <div class="row g-2 justify-content-center">
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="card p-3 m-3 card-color" style="width:22rem; height: 32rem;">
-            <div class="card-body px-auto " >
+    <div class="container text-center my-5">
+      <div class="row row-cols-1 row-cols-md-2 row-cols-sm-2 row-cols-lg-3 g-5">
+        
+        <div class="col">
+          <div class="card card-color">
+            <div class="card-body py-4 px-4">
               <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
                 src="/img/tomate.jpg"
-                class="card-img-top rounded"
-                alt="..."
-                style="height: 12rem;"
+                class="card-img-top img-size rounded"
               />
-              <p
-                class="d-flex justify-content-center card-text fw-lighter align-top position-relative mb-0 mt-2"
-              >TomatoLover21</p>
-              <p class="d-flex justify-con card-text">Cosecha record de tomates en Tierra del fuego.</p>
+              <p class="card-text fw-lighter my-2">TomatoLover21</p>
+              <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="card p-3 m-3 card-color" style="width:22rem; height: 32rem;">
-            <div class="card-body px-auto">
-              <h3 class="card-title">Nueva temporada de cultivos de soja en Mendoza, Argentina</h3>
+
+        <div class="col">
+          <div class="card card-color">
+            <div class="card-body py-4 px-4">
+              <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
-                src="/img/card-image-example-2.jpg"
-                class="card-img-top rounded"
-                alt="..."
-              style="height: 12rem;"
+                src="/img/tomate.jpg"
+                class="card-img-top img-size rounded"
               />
-              <p
-                class="d-flex justify-content-center card-text fw-lighter align-top position-relative mb-0 mt-2"
-              >TomatoLover21</p>
-              <p class="card-text">Me gustan mucho la soja porque es fachera.</p>
+              <p class="card-text fw-lighter my-2">TomatoLover21</p>
+              <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <div class="card p-3 m-3 card-color" style="width:22rem; height: 32rem;">
-            <div class="card-body px-auto">
-              <h3 class="card-title">Agro cultivos de paltas en mexico, fan de la vida</h3>
+
+        <div class="col my-   ">
+          <div class="card card-color">
+            <div class="card-body py-4 px-4">
+              <h3 class="card-title">Cosecha record de tomates en Tierra del fuego.</h3>
               <p class="card-text">26/08/2022</p>
               <img
-                src="/img/card-image-example-3.jpg"
-                class="card-img-top rounded"
-                alt="..."
-                style="height: 12rem;"
+                src="/img/tomate.jpg"
+                class="card-img-top img-size rounded"
               />
-              <p
-                class="d-flex justify-content-center card-text fw-lighter align-top position-relative mb-0 mt-2"
-              >TomatoLover21</p>
-              <p class="card-text">Me gustan mucho los paltas porque son verdes.</p>
+              <p class="card-text fw-lighter my-2">TomatoLover21</p>
+              <p class="card-text">Cosecha record de tomates en Tierra del fuego.</p>
             </div>
-            
           </div>
         </div>
-      </div>
+
     </div>
+  </div>
 
     <!-- Carrusel de noticias acerca de la tematica agro -->
     <div class="containter-fluid mt-5 mb-5">
