--- a/views/posteos.hbs
+++ b/views/posteos.hbs
@@ -35,7 +35,7 @@
             <div class="container-fluid">
               <a class="navbar-brand " href="/">
                 <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid" style="width:50px;">
-                <a href="" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
+                <a href="/" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
               </a>
             </div>
           </div>
