--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -32,7 +32,7 @@
               </a>
             </div>
           </div>
-    
+
           <div class=" col-lg-6 d-flex justify-content-end text-center mt-3" >
             <ul class="nav fs-5">
               {{# if loggedin}}
@@ -53,7 +53,7 @@
               <li class="nav-item">
               <a
                 class="nav-link link-light btn btn-outline-white me-2"
-                href="/login"
+                href="/logout"
               >Desloguearse</a>
               </li>
               <div class="vr bg-light m-2"></div>
@@ -78,14 +78,15 @@
     </nav>
 
 
-    <div class=" container-fluid  justify-content-center my-3">
+    <!-- Container para crear posteos -->
+    <div class=" container-fluid rounded justify-content-center color-container text-white my-3 py-3" style=" width:800px">
         <div class="row">
                 <p class="fs-3 text-center">Crea tu posteo para Agro Forum!</p>
         </div>
 
-        <div class="d-flex row justify-content-center mb-3 ">
+        <div class="d-flex row justify-content-center mb-3 text-dark ">
             <div class="col-4">
-                <div class="form-floating mb-3">
+                <div class="form-floating mb-3 ">
                  <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
                  <label for="floatingInput">Titulo del post</label>
                 </div>
@@ -98,7 +99,7 @@
             </div>
         </div>
 
-        <div class=" d-flex row justify-content-center mb-5">
+        <div class=" d-flex row justify-content-center mb-5 text-dark">
             <div class="col-8">
                 <div class="form-floating">
                  <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
@@ -109,7 +110,7 @@
 
         <div class="d-flex row justify-content-start">
             <div class="col-2"></div>
-            <div class="col-4">
+            <div class="col-6">
                 <div class="mb-3">
                  <label for="formFile" class="form-label">Selecciona la foto de portada para tu post</label>
                  <input class="form-control" type="file" id="formFile">
