se agregaron middleware

--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -69,7 +69,7 @@
                 <a
                   class="nav-link link-light btn btn-outline-white me-2"
                   href="/posteos"
-                >Mis posteos</a>
+                >Post's</a>
               </li>
             </ul>
           </div>
