--- a/views/posteos.hbs
+++ b/views/posteos.hbs
@@ -35,7 +35,7 @@
             <div class="container-fluid">
               <a class="navbar-brand " href="/">
                 <img src="/img/logo-agro-forum-agro-black.png" alt="agro-logo" class="img-fluid" style="width:50px;">
-                <a href="" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
+                <a href="/" class="link-light text-decoration-none" style="font-size: 25px;">Agro Forum</a> 
               </a>
             </div>
           </div>
@@ -54,6 +54,16 @@
                 >Buscar</button>
               </form>
             </div>
+          </div>
+          <div class="col-lg-4 text-center mt-3" >
+            <ul class="nav justify-content-end fs-5">
+              <li class="nav-item pt-1">
+                <a
+                  class="nav-link link-light btn btn-outline-white "
+                  href="/crear"
+                >Crear Post</a>
+              </li>
+            </ul>
           </div>
           </div>
         </div>
