--- a/views/login.hbs
+++ b/views/login.hbs
@@ -55,7 +55,7 @@
 
     <div class="container-fluid text-center  ">
       <div class="row vh-100 align-items-center justify-content-center">
-        <div class=" card-color card-login rounded p-3 col-sm-9 col-md-6 col-lg-4">
+        <div class=" card-color card-login rounded p-3 col-sm-9 col-md-6 col-lg-4 my-5S">
             <img src="/img/logo-agro-forum-agro-color.png" alt="planta feliz" width="30%"  height="auto" class="img-fluid mb-2">
             <form action="/" method="post">
               <div class="mb-1">
@@ -102,11 +102,17 @@
               data-bs-toggle="modal" data-bs-target="#exampleModal">
               Primera vez? Registrate acá!
               </button>
-              <a href="/">volver</a>
+              <br>
+              <a class="link-success" href="/">Volver</a>
             </form>
             {{# if loggedin}}
           <div class="alert alert-danger" role="alert">
           Usuario o contraseña incorrecta
+          </div>
+            {{/if}}
+            {{# if logg}}
+          <div class="alert alert-success" role="alert">
+          Usuario Creado
           </div>
             {{/if}}
         </div>
